Implemented several tests, notes + perf results moved to readme